[Improve][Core] Add JDK version-specific GC logging options for JDK8 and JDK 11+ (#2320)